Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -8,13 +8,18 @@
 Путь к эльфу — путь к эльфу запуск которого нужно выполнять.<br />
 Имя книги эльфа — название книги отображаемое в BookManager.<br />
 == Секция Настройки ==
-Клавиша переключения — клавиша по которой будет происходить последовательное выполнение действий.<br />
 Только в режиме ожидания — если включено, то переключение будет происходить только если на экране активен режим ожидания (StandbyBook).<br />
 Вибрировать при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
 Перерисовывать StandbyBook — если включено, то после переключения действий E-Switch перерисует StandbyBook. Это необходимо для эльфов рисующих на главном экране (режим ожидания).<br />
 При выходе закр. текущий эльф — если включено, то при закрытии E-Switch закроется эльф на который выполнено переключение (активный).<br />
 Повторный запуск по клавише — если включено, то может выполнятся повторный запуск активного эльфа по заданной клавише.<br />
-Клавиша повторного запуска — задает клавишу для повторного запуска.<br />
+При запуске проигрывателя — задает действие выполняемое при запуске проигрывателя (переключение на указанные эльф).
+=== Секция Клавиши ===
+След. эльф — задает клавишу, по нажатии которой будет происходить переключение вперед.
+Пред. эльф — задает клавишу, по нажатии которой будет происходить переключение назад.
+Повторный запуск — задает клавишу, по которой будет происходить повторный запуск активного эльфа (примеч. параметр _Повторный запуск по клавише_ должен быть активирован)
+Время вибрации (мс) — задает время вибрирования телефона при переключении. (примеч. параметр _Вибрировать при переключении_ быть активирован)
+
 == Ссылки ==
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=3313 Эльф BookManager]
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=5028 Модификация эльфа BookManager]
