Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -15,11 +15,10 @@
 Повторный запуск по клавише — если включено, то может выполнятся повторный запуск активного эльфа по заданной клавише.<br />
 При запуске проигрывателя — задает действие выполняемое при запуске проигрывателя (переключение на указанные эльф).
 === Секция Клавиши ===
-След. эльф — задает клавишу, по нажатии которой будет происходить переключение вперед.
-Пред. эльф — задает клавишу, по нажатии которой будет происходить переключение назад.
-Повторный запуск — задает клавишу, по которой будет происходить повторный запуск активного эльфа (примеч. параметр _Повторный запуск по клавише_ должен быть активирован)
-Время вибрации (мс) — задает время вибрирования телефона при переключении. (примеч. параметр _Вибрировать при переключении_ быть активирован)
-
+<blockquote>След. эльф — задает клавишу, по нажатии которой будет происходить переключение вперед.<br />
+Пред. эльф — задает клавишу, по нажатии которой будет происходить переключение назад.<br />
+Повторный запуск — задает клавишу, по которой будет происходить повторный запуск активного эльфа (примеч. параметр _Повторный запуск по клавише_ должен быть активирован)<br /></blockquote>
+Время вибрации (мс) — задает время вибрирования телефона при переключении. (примеч. параметр _Вибрировать при переключении_ должен быть активирован)
 == Ссылки ==
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=3313 Эльф BookManager]
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=5028 Модификация эльфа BookManager]
