Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -1,24 +1,27 @@
 #summary Описание настроек E-switch
 = Описание настроек E-switch =
-== Секция Эльфы ==
-Действие:
- # Отключено — действие выполняться не будет.
- # Переключить на эльф — при нажатии заданной клавиши переключит на этот эльф.
- # Пусто — при нажатии заданной клавиши ничего не запустит и закроет предыдущий эльф.
-Путь к эльфу — путь к эльфу запуск которого нужно выполнять.<br />
-Имя книги эльфа — название книги отображаемое в BookManager.<br />
-== Секция Настройки ==
-Только в режиме ожидания — если включено, то переключение будет происходить только если на экране активен режим ожидания (StandbyBook).<br />
-Вибрировать при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
-Перерисовывать StandbyBook — если включено, то после переключения действий E-Switch перерисует StandbyBook. Это необходимо для эльфов рисующих на главном экране (режим ожидания).<br />
-При выходе закр. текущий эльф — если включено, то при закрытии E-Switch закроется эльф на который выполнено переключение (активный).<br />
-Повторный запуск по клавише — если включено, то может выполнятся повторный запуск активного эльфа по заданной клавише.<br />
-При запуске проигрывателя — задает действие выполняемое при запуске проигрывателя (переключение на указанные эльф).
-=== Секция Клавиши ===
-<blockquote>След. эльф — задает клавишу, по нажатии которой будет происходить переключение вперед.<br />
-Пред. эльф — задает клавишу, по нажатии которой будет происходить переключение назад.<br />
-Повторный запуск — задает клавишу, по которой будет происходить повторный запуск активного эльфа (примеч. параметр _Повторный запуск по клавише_ должен быть активирован)<br /></blockquote>
-Время вибрации (мс) — задает время вибрирования телефона при переключении. (примеч. параметр _Вибрировать при переключении_ должен быть активирован)
+== Рабочие столы ==
+  === Эльфы ===
+  Отображение — указывает будет отображаться эльф-виджет или нет.<br />
+  Путь к эльфу — путь к эльфу в файловой системе запуск которого нужно выполнять.<br />
+  Имя книги эльфа — название книги отображаемое в BookManager.
+== Настройки ==
+Только в реж. ожидания — если включено, то переключение будет происходить только если на экране активен режим ожидания (StandbyBook).<br />
+При выходе закр. рабочий стол — если включено, то при закрытии E-Switch закроется активный рабочий стол.<br />
+Повторный запуск по клавише — если включено, то может выполнятся повторный запуск эльфа на активном рабочем столе по заданной клавише.
+  _Примечание_: Для повтора по клавише используется эльф с номером 5 на активном рабочем столе.
+При запуске проигрывателя — задает действие выполняемое при запуске проигрывателя (переключение на указанный рабочий стол).
+  === Клавиши ===
+  Перекл. вперед — задает клавишу, по нажатии которой будет происходить переключение на следующий рабочий стол.<br />
+  Перекл. назад — задает клавишу, по нажатии которой будет происходить переключение на предыдущий рабочий стол.<br />
+  Повторный запуск — задает клавишу, для повтора эльфа на активном рабочем столе.
+    _Примечание_: Параметр _Повторный запуск по клавише_ должен быть активирован.
+  === Смена обоев ===
+  Смена обоев при переключении — позволяет включить переключение обоев.<br />
+  Обои — задает список обоев разных для каждого рабочего стола.
+  === Вибрация ===
+  Вибр. при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
+  Время вибрации (мс) — задает время вибрирования телефона при переключении в миллисекундах. 
 == Ссылки ==
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=3313 Эльф BookManager]
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=5028 Модификация эльфа BookManager]
