Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -18,6 +18,7 @@
     _Примечание_: Параметр _Повторный запуск по клавише_ должен быть активирован.
   === Смена обоев ===
   Смена обоев при переключении — позволяет включить переключение обоев.<br />
+    _Примечание_: Необходимо в настройках телефона [WallpaperChange установить фоновый рисунок] _Из темы_.
   Обои — задает список обоев разных для каждого рабочего стола.
   === Вибрация ===
   Вибр. при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
