Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -17,7 +17,7 @@
   Повторный запуск — задает клавишу, для повтора эльфа на активном рабочем столе.
     _Примечание_: Параметр _Повторный запуск по клавише_ должен быть активирован.
   === Смена обоев ===
-  Смена обоев при переключении — позволяет включить переключение обоев.<br />
+  Смена обоев при переключении — позволяет включить переключение обоев.
     _Примечание_: Необходимо в настройках телефона [WallpaperChange установить фоновый рисунок] _Из темы_.
   Обои — задает список обоев разных для каждого рабочего стола.
   === Вибрация ===
