Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -1,7 +1,7 @@
 #summary Описание настроек E-switch
 = Описание настроек E-switch =
 == Рабочие столы ==
-  === Эльфы ===
+  === [ELF Эльфы] ===
   Отображение — указывает будет отображаться эльф-виджет или нет.<br />
   Путь к эльфу — путь к эльфу в файловой системе запуск которого нужно выполнять.<br />
   Имя книги эльфа — название книги отображаемое в BookManager.
