Edited wiki page SettingsDescription through web user interface.

--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -4,7 +4,8 @@
   === [ELF Эльфы] ===
   Отображение — указывает будет отображаться эльф-виджет или нет.<br />
   Путь к эльфу — путь к эльфу в файловой системе запуск которого нужно выполнять.<br />
-  Имя книги эльфа — название книги отображаемое в BookManager.
+  Имя книги эльфа — название книги отображаемое в BookManager.<br />
+  http://dl.dropbox.com/u/22711927/Permanently/Images/bookman_sshot.png
 == Настройки ==
 Только в реж. ожидания — если включено, то переключение будет происходить только если на экране активен режим ожидания (StandbyBook).<br />
 При выходе закр. рабочий стол — если включено, то при закрытии E-Switch закроется активный рабочий стол.<br />
