--- a/wiki/SettingsDescription.wiki
+++ b/wiki/SettingsDescription.wiki
@@ -21,9 +21,13 @@
   Смена обоев при переключении — позволяет включить переключение обоев.
     _Примечание_: Необходимо в настройках телефона [WallpaperChange установить фоновый рисунок] _Из темы_.
   Обои — задает список обоев разных для каждого рабочего стола.
-  === Вибрация ===
-  Вибр. при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
-  Время вибрации (мс) — задает время вибрирования телефона при переключении в миллисекундах. 
+  === Индикация ===
+    === Вибрация ===
+    Вибр. при переключении — если включено, то при переключении телефон отреагирует короткой вибрацией.<br />
+    Время вибрации (мс) — задает время вибрирования телефона при переключении в миллисекундах.
+    === Звук ===
+    Звук при переключении — если включено, то при переключении будет проигран звуковой файл.<br />
+    Путь к звуку — воспроизводимый звук.
 == Ссылки ==
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=3313 Эльф BookManager]
  * [http://mobilefree.ru/newbb_plus/viewtopic.php?topic_id=5028 Модификация эльфа BookManager]
